fix z-index

--- a/tour.scss
+++ b/tour.scss
@@ -7,7 +7,7 @@
 
 .introjs-tooltipReferenceLayer {
   position: absolute;
-  z-index: 10000000;
+  z-index: 9999998;
   background-color: transparent;
 }
 
